# inputbox

./: Cargo.toml  README.md
.github/workflows/: check.yml
android/: settings.gradle.kts
android-release-support/: .gitignore  Cargo.toml  README.md  pom-template.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/inputbox/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/inputbox/src/main/: AndroidManifest.xml
android/inputbox/src/main/java/moe/mivik/inputbox/: ActivityTracker.kt  InputBox.kt  InputBoxInitializer.kt
examples/: multiline.rs  simple.rs
inputbox/: Cargo.toml
inputbox/examples/: simple.rs
inputbox/src/: lib.rs
inputbox/src/backend/: general.rs  ios.rs  ohos.rs
inputbox/src/backend/macos/: mod.rs
inputbox/src/backend/windows/: mod.rs
script/: android-release.sh
src/: lib.rs
src/backend/: android.rs  general.rs  ios.rs  mod.rs  ohos.rs
src/backend/macos/: inputbox.jxa.js  mod.rs
src/backend/windows/: mod.rs
