[package]
name = "inputbox"
version = "0.0.1"
edition = "2024"
authors = ["Mivik <mivikq@gmail.com>", "sjfhsjfh <sjfhsjfh@qq.com>"]
description = "A cross-platform, native GUI input box."
license = "MIT"
repository = "https://github.com/Mivik/inputbox"
homepage = "https://github.com/Mivik/inputbox"
documentation = "https://docs.rs/inputbox"
categories = []
keywords = ["ui", "dialog", "input", "native"]

[lib]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multiline"
path = "examples/multiline.rs"

[dependencies]
cfg-if = "1.0.4"
serde_json = "1.0"
which = "8.0.1"
