[workspace]
members = ["android-release-support", "inputbox"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
repository = "https://github.com/Mivik/inputbox"
documentation = "https://docs.rs/inputbox-android"
rust-version = "1.71.0"
categories = ["gui", "command-line-interface"]
keywords = ["ui", "dialog", "input", "native"]
