[package]
name = "inputbox"
version = "0.1.0"
authors = ["Mivik <mivikq@gmail.com>", "sjfhsjfh <sjfhsjfh@qq.com>"]
description = "A cross-platform, native GUI input box."
documentation = "https://docs.rs/inputbox"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "multiline"
path = "examples/multiline.rs"

[dependencies]
cfg-if = "1.0.4"
log = "0.4.29"
serde_json = "1.0"
which = "8.0.1"

[target.'cfg(target_os = "android")'.dependencies]
inputbox-android = { path = "../android-release-support", version = "0.1.1" }
jni = "0.22"
once_cell = "1.21.3"

[target.'cfg(target_os = "ios")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"

[target.'cfg(target_env = "ohos")'.dependencies]
napi-derive-ohos = { version = "1.1.3" }
napi-ohos = { version = "1.1.3", default-features = false, features = [
    "napi8",
    "async",
] }
